attempt at overflow fix

--- a/css/logo.less
+++ b/css/logo.less
@@ -3,9 +3,19 @@
 
 @svgsize: 25vw;
 
+html {
+  width: 100%;
+  overflow: auto;
+}
+
+body {
+  overflow: auto;
+  width: 100%;
+}
+
 #main-header {
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   overflow: hidden;
   background-image: url('../img/header-bg%20copy.png');
 }
